1998-12-02  Raja R Harinath  <harinath@cs.umn.edu>

	* Makefile.am (EXTRA_DIST): Add back `gnomesupport.awk' and
	`README-gnome'. 

1998-11-06  Raja R Harinath  <harinath@cs.umn.edu>

	* popt.c (gnomesupport-fake.h): Include.
	* poptint.h (ENABLE_NLS): Define POPT_() and _() i18n markers
	based on this.

1998-11-04  Raja R Harinath  <harinath@cs.umn.edu>

	* gnomesupport-fake.h: Include gnomesupport.h unconditionally.
	* Makefile.am: Build libgnomesupport.la unconditionally.
	(popt_sources): List `popt' sources.
	(libgnomesupport_la_SOURCES): Include $popt_sources.
	(include_HEADERS): Install `popt.h'.
	(noinst_HEADERS): Don't install poptint.h and findme.h.
	* popt.c: New file.  From the POPT package.  Replacement for
	argp/getopt.
	* poptparse.c: Likewise.
	* popthelp.c: Likewise.
	* poptconfig.c: Likewise.
	* findme.c: Likewise.
	* findme.h: Likewise.
	* popt.h: Likewise.
	* poptint.h: Likewise.
	
1998-09-02  Raja R Harinath  <harinath@cs.umn.edu>

	* canonicalize.c (realpath): Remove `weak_alias'.
	(canonicalize_file_name): Comment out.

	* gnomesupport.awk: Remove `canonicalize_file_name', and correct
	the comment for `realpath'.

1998-09-02  Martin Baulig  <martin@home-of-linux.org>

	* gnomesupport.awk (canonicalize_file_name, realpath): Emit
	declarations if required.

	* canonicalize.c (canonicalize_file_name, realpath): New file.
	Imported from GLibC 2.0.7.

	* libc-symbols.h: New file. Imported from GLibC 2.0.7.

1998-08-24  Martin Baulig  <martin@home-of-linux.org>

	* gnomesupport.awk: Emit declarations for `setreuid', `setregid'
	and `getpagesize' if required (GCC_NEED_DECLARATIONS).

1998-08-18  Martin Baulig  <martin@home-of-linux.org>

	* Makefile.am: Added explicit dependency `error.c: gnomesupport.h'.

	* gnomesupport-fake.h: Include `sys/types.h' to get `size_t' under
	FreeBSD.

	* gnomesupport-fake.h: Include `gnomesupport.h' only if we really
	`NEED_GNOMESUPPORT_H'.

1998-08-16  Martin Baulig  <martin@home-of-linux.org>
